Some bugs on safari fixed. Back-to-top btn added

--- a/festival-musica-project/src/sass/base/_globales.scss
+++ b/festival-musica-project/src/sass/base/_globales.scss
@@ -16,7 +16,7 @@ body {
     font-size: 1.6rem;
     height: 100vh;
     overflow-y: scroll;
-    
+
     &.fixed-body {
         overflow: hidden;
     }
@@ -55,4 +55,19 @@ img {
 .container {
     width: min(95%, 120rem);
     margin: 0 auto;
+}
+
+/* Añade esto a tu archivo CSS */
+#myBtn {
+    display: none; 
+    background-color: rgb(244, 242, 242);
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    border: none; 
+    outline: none; 
+    cursor: pointer;
+    padding: 15px; 
+    border-radius: 10px;
 }
