--- a/festival-musica-project/src/sass/layout/_video.scss
+++ b/festival-musica-project/src/sass/layout/_video.scss
@@ -19,6 +19,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        z-index: 10;
     }
 
     &__content {
@@ -40,7 +41,11 @@
     }
 
     &__video{
-        width: auto;
+        position: absolute;
+        z-index: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
         display: block;
     }
 }
